--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,42 @@
 /* This file is for your main application css. */
 
-@import "phoenix.css"
+@import "~purecss/build/pure.css";
+@import "~font-awesome/css/font-awesome.css";
+
+html, body {
+  height: 100%;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.centered {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  margin: 10px;
+  text-align: center;
+}
+
+.file-upload {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.file-upload input[type=file] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  cursor: pointer;
+  opacity: 0;
+}
