--- a/lib/ananke_web/templates/page/index.html.eex
+++ b/lib/ananke_web/templates/page/index.html.eex
@@ -1,9 +1,14 @@
-<div class="centered">
+<div class="centered" id="some-box">
   <div class="box">
     <div class="file-upload pure-button pure-button-primary">
       <i class="fa fa-file"></i>
-      <span>Select file</span>
-      <input type="file" id="upload"/>
+      <span>Select File</span>
+      <input type="file" id="file-upload"/>
+    </div>
+    <div class="pure-button button-secondary pure-button-disabled" id="upload">
+      <i class="fa fa-upload"></i>
+      <span>Upload File</span>
     </div>
   </div>
+  <progress id="upload-progress" hidden></progress>
 </div>
