--- a/lib/ananke_web/templates/page/index.html.eex
+++ b/lib/ananke_web/templates/page/index.html.eex
@@ -1,6 +1,7 @@
 <div class="centered" id="some-box">
+  <span id="link"></span>
   <div class="box">
-    <div class="file-upload pure-button pure-button-primary">
+    <div class="file-upload pure-button pure-button-primary" id="file-select">
       <i class="fa fa-file"></i>
       <span>Select File</span>
       <input type="file" id="file-upload"/>
