--- a/lib/ananke_web/templates/layout/app.html.eex
+++ b/lib/ananke_web/templates/layout/app.html.eex
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" id="root">
       <%= render @view_module, @view_template, assigns %>
     </div>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
